Javafx launcher